# HTN_DuAn

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/button_isr/: CMakeLists.txt  button.c
components/button_isr/include/: button.h
components/buzzer/: CMakeLists.txt  buzzer.c
components/buzzer/include/: buzzer.h
components/dht11/: CMakeLists.txt  dht11.c
components/dht11/include/: dht11.h
components/lcd_i2c/: CMakeLists.txt  lcd_i2c.c
components/lcd_i2c/include/: lcd_i2c.h
components/mq135/: CMakeLists.txt  mq135.c
components/mq135/include/: mq135.h
components/mq2_gas/: CMakeLists.txt  mq2.c
components/mq2_gas/include/: mq2.h
components/mq_sensors/: CMakeLists.txt  mq_sensors.c
components/mq_sensors/include/: mq_sensors.h
main/: CMakeLists.txt  idf_component.yml  main.c
